# data-engineering-project

./: .gitignore  README.md  dbt_project.yml
homework/: Homework.md  README.md  pyproject.toml
homework/01-docker-terraform/: Dockerfile  docker-compose.yaml  ingestion.py
homework/docker-spark/: Dockerfile  Untitled.ipynb  docker-compose.yml  pyproject.toml
macros/: get_vendor_names.sql
models/marts/: dim_vendors.sql
models/staging/: _sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
pipeline/: Dockerfile  bash.sh  ingest_data.py  pipeline.py  pyproject.toml
terraform/: .terraform.lock.hcl  main.tf  variables.tf
