[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "notebook>=7.5.6",
    "pandas>=3.0.2",
    "psycopg2>=2.9.12",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.49",
]
